# stripper

./: CMakeLists.txt  INSTALL.txt  README.txt  stripperConfig.h.in
cmake/modules/: FindOpenBabel2.cmake  IncludeAllTests.cmake
doc/: manual.docx
doc/figures/: dataflow.pptx
examples/: stripper.in.txt
include/: calculator.h  counter.h  options.h  parseCommandLine.h  parseScaffoldDefinitions.h  stripperConfig.h
include/scaffolds/: murcko_1.h  murcko_2.h  oprea.h  oprea_1.h  oprea_2.h  oprea_3.h  rings_with_linkers_1.h  rings_with_linkers_2.h  scaffold.h  schuffenhauer.h  schuffenhauer_1.h  schuffenhauer_2.h  schuffenhauer_3.h  schuffenhauer_4.h  schuffenhauer_5.h
src/: calculator.cpp  counter.cpp  main.cpp  options.cpp  parseCommandLine.cpp  parseScaffoldDefinitions.cpp
src/scaffolds/: murcko_1.cpp  murcko_2.cpp  oprea.cpp  oprea_1.cpp  oprea_2.cpp  oprea_3.cpp  rings_with_linkers_1.cpp  rings_with_linkers_2.cpp  scaffold.cpp  schuffenhauer.cpp  schuffenhauer_1.cpp  schuffenhauer_2.cpp  schuffenhauer_3.cpp  schuffenhauer_4.cpp  schuffenhauer_5.cpp
test/: magweg.txt  scaffold-murcko1.txt  scaffold-murcko2.txt  scaffold-ringswithlinkers1.txt  scaffold-ringswithlinkers2.txt  scaffold-schuffenhauer1.txt  scaffold-schuffenhauer2.txt  scaffold-schuffenhauer3.txt  test_1.smi  test_10.smi  test_15.smi  test_16.smi  test_17.smi  test_2.smi  test_21.smi  test_26.smi  test_27.smi  test_28.smi  test_34.smi  test_35.smi  test_37.smi  test_39.smi  test_4.smi  test_42.smi  test_45.smi  test_47.smi  test_5.smi  test_6.smi  test_7.smi  test_8.smi  test_9.smi
test/molecules/: 11.smi  12.smi  13.smi  14.smi  18.smi  19.smi  20.smi  22.smi  23.smi  24.smi  25.smi  29.smi  3.smi  30.smi  31.smi  32.smi  36.smi  38.smi  40.smi  41.smi  43.smi  44.smi  46.smi
test/scaffolds/: oprea1.txt  oprea2.txt  oprea3.txt  schuffenhauer1.txt  schuffenhauer2.txt  schuffenhauer3.txt  schuffenhauer4.txt  schuffenhauer5.txt
